# AI_content_moderation

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_tldd.py
RAG/: EVAL_GUIDE.md  README.md  build_rag_pipeline.py  eval_rag_pipeline.py
api/: Dockerfile  README.md  api_server.py  docker-compose.yml  requirements.txt  test_api.sh
confluence/: README.md  __init__.py  client.py  config.py  examples.py  moderator.py  rewriter.py
core/: __init__.py  config.py  llm_client.py  prompt_injection.py  rag.py  rewrite.py  sanitizer.py
docs/: architecture-diagram.md
golden/: golden_embeddings.py  golden_faiss_retriever.py  golden_retriever.py  readme.md  utils.py
tests/: test_api.py  test_client.py
ui/: confluence_moderator_app.py  confluence_rewriter_app.py  gradio_app.py  ironclad_ui_v2_wireframe.html  test_comments.json
